fix sidebar content unwanted shifting position on scroll

--- a/static/output.css
+++ b/static/output.css
@@ -2395,6 +2395,10 @@ input:checked + .toggle-bg {
   padding: 2rem;
 }
 
+.p-6 {
+  padding: 1.5rem;
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -2684,6 +2688,18 @@ input:checked + .toggle-bg {
   }
 }
 
+.hover\:me-4:hover {
+  margin-inline-end: 1rem;
+}
+
+.hover\:me-1:hover {
+  margin-inline-end: 0.25rem;
+}
+
+.hover\:me-0:hover {
+  margin-inline-end: 0px;
+}
+
 .hover\:overflow-y-scroll:hover {
   overflow-y: scroll;
 }
@@ -2706,6 +2722,56 @@ input:checked + .toggle-bg {
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-blue-300:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(164 202 254 / var(--tw-bg-opacity));
+}
+
+.hover\:p-3:hover {
+  padding: 0.75rem;
+}
+
+.hover\:px-3:hover {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.hover\:px-0:hover {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.hover\:px-1:hover {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.hover\:px-4:hover {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.hover\:px-2:hover {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.hover\:pe-6:hover {
+  padding-inline-end: 1.5rem;
+}
+
+.hover\:pe-3:hover {
+  padding-inline-end: 0.75rem;
+}
+
+.hover\:pe-0:hover {
+  padding-inline-end: 0px;
+}
+
+.hover\:pe-2:hover {
+  padding-inline-end: 0.5rem;
 }
 
 .hover\:text-blue-600:hover {
